--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+html {
+    font-size: 10px;
+    font-family:  'Poppins', sans-serif;
+}
