--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ html {
     box-sizing: content-box;
     width: 3rem;
     height: 3rem;
-    padding: 1rem ;
+    padding: 1rem;
     /* margin-left: 1rem; */
-    
+
 }
 
 .twitter_icon:hover {
@@ -53,7 +53,6 @@ body {
     position: fixed;
     padding: 15px 8% 0 6%;
 
-
 }
 
 .top_left_side {
@@ -86,32 +85,57 @@ body {
 .top_nav {
     margin-top: 10px;
 }
-.tweet_button{
-background-color: rgb(29, 155 ,240);
-color: white;
-width: 90%;
-height:55px ;
-border-radius: 9999px;
-margin-top:15px ;
-font-size: 1.7rem;
-font-weight:700px ;
-cursor:pointer; 
-border: none;
-transition-duration: .2s;
+
+.tweet_button {
+    background-color: rgb(29, 155, 240);
+    color: white;
+    width: 90%;
+    height: 55px;
+    border-radius: 9999px;
+    margin-top: 15px;
+    font-size: 1.7rem;
+    font-weight: 700px;
+    border: none;
+    transition-duration: .2s;
 }
-.tweet_button:hover{
+
+.tweet_button:hover {
     background-color: rgb(25, 136, 209);
+    cursor: pointer;
+
 
 }
 
+.bottom_left_side {
+   
+    width: 100%;
+    height: 20%;
+    padding-top: 50px;
+}
+
+.bottom_left_side_box{
+    display: flex;
+    align-items: center;
+    padding:  8px 10px 5px 15px; 
+    margin-left: 10px;
+    gap: 10px;
+
+}
+.bottom_left_side_box:hover{
+    background-color: rgb(231, 234, 240);
+    border-radius: 9999px;
+    cursor: pointer;
+}
+.account_name{
+    margin-right :15px ;
+    font-size: 1.5rem;
+    line-height: 20px;
+}
 .main_section {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 50%;
-
-
-
 }
 
 .right_side {
@@ -119,7 +143,6 @@ transition-duration: .2s;
     flex-direction: column;
     justify-content: space-between;
     width: 30%;
-
 
 
 }
