--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ html {
 
 .twitter_icon {
     box-sizing: content-box;
-    width: 3rem;
-    height: 3rem;
-    padding: 1rem;
-    /* margin-left: 1rem; */
+    width: 2.5rem;
+    height: 2.5rem;
+    /* padding: 1rem; */
+    margin-left: 1rem;
 
 }
 
@@ -26,8 +26,6 @@ html {
     background-color: rgb(229, 237, 248);
     border-radius: 50%;
 }
-
-
 
 a {
     text-decoration: none;
@@ -49,9 +47,10 @@ body {
     justify-content: space-between;
     align-items: center;
     flex-basis: 0 0 20%;
-    height: 100%;
-    position: fixed;
-    padding: 15px 8% 0 6%;
+    height: 100%; 
+    padding: 10px 8% 0 4%;
+    position: fixed; 
+
 
 }
 
@@ -131,13 +130,60 @@ body {
     font-size: 1.5rem;
     line-height: 20px;
 }
+
 .main_section {
+    display: flex;
+    justify-content: space-between;
+    width: 45%;
+    height: 100%;
+    margin-left: 23%;
+    border-right: 1px solid rgb(201 216 227);
+    border-left: 1px solid rgb(201 216 227);
+    padding: 10px 15px 0 15px;
+
+}
+
+.home_box{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 50%;
+    width: 100%;
+    height: 100px;
+    gap: 20px;
+    border-bottom: 1px solid rgb(201 216 227);
+    cursor: pointer;
+
+}
+.inner_home_box{
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 20px;
+    color:grey;
+    height:50%;
+
+}
+.for_you:hover{
+ background-color: rgb(231, 234, 240);
+ font-weight: 700;
+ color: black;
+ text-decoration:underline;
+ text-decoration-color:rgb(29, 155, 240);
+ text-decoration-thickness: 5px;
+ text-underline-offset: 15px;
+
 }
 
+.following:hover{
+    background-color: rgb(231, 234, 240);
+    font-weight: 700;
+    color: black;
+    text-decoration:underline;
+    text-decoration-color:rgb(29, 155, 240);
+    text-decoration-thickness: 5px;
+    text-underline-offset: 15px;
+}
 .right_side {
     display: flex;
     flex-direction: column;
