--- a/style.css
+++ b/style.css
@@ -385,15 +385,20 @@ i:hover {
 
 
 }
+.serach_box{
+    position: sticky;
+    top: 0;
+    height: 45px;
+    background-color: white;
+}
 .right_side input{
-    max-width: 88%;
+    width: 88%;
     border-radius: 999px;
     background-color: rgb(235, 238, 252);
     height: 40px;
     padding-left: 50px;
     border: none;
-    position: sticky;
-    top: 0;
+    
  }
  .right_side input:focus{
     outline-color: rgb(109, 188, 241);
