--- a/style.css
+++ b/style.css
@@ -513,6 +513,96 @@ i:hover {
     text-decoration: underline;
  }
 
+ /* login Form  */
+ .all-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+     align-items: center;
+     background-color: rgb(172, 167, 167);
+ }
+ #login-form{
+    width: 45%;
+    height: 590px;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 30px;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+ }
+ .form-fields{
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+    height: 540px;
+    padding: 0 25px 50px 25px;
+ }
+ .select-box{
+    width: 300px;
+    height: 38px; 
+    margin: 0 0 12px; 
+    border-radius: 9999px;
+    display: flex;
+    align-items: center;
+    border: 1px solid rgb(228, 222, 222);
+    padding: 5px 5px 5px 5px;
+    justify-content: space-between;
+ }
+.select-box:hover{
+    background-color: rgb(229, 237, 248);
+
+}
+.signIN{
+    display: flex; 
+    flex-direction: column; 
+    margin-left: -50px;
+}
+
+#signIn_email:focus{
+    outline: none;
+
+}
+.apple_box{
+     display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 300px; 
+    height: 38px;
+    border-radius: 999px;
+    border:1px solid  rgb(228, 222, 222);
+    margin: 12px 0 12px;
+
+}
+.apple_box:hover{
+    background-color:  rgb(241, 239, 239) ;
+}
+
+#email:focus{
+ outline: none;
+}
+
+ .twitter_icon_form{
+    box-sizing: content-box;
+    width: 3rem;
+    height: 2.5rem;
+    /* padding: 1rem; */
+    margin-top: 5px;
+ }
+.nextbox:hover{
+    background-color: rgb(49, 47, 47);
+}
+.forgetPassword:hover{
+    background-color:  rgb(241, 239, 239) ;
+
+}
+
+#signup:hover{
+    text-decoration: underline;
+
+}
  @media screen and (max-width:1260px) {
     .tweet_button{
         width:55px;
