--- a/style.css
+++ b/style.css
@@ -599,8 +599,28 @@ i:hover {
 
 }
 
-#signup:hover{
+.link_underline:hover{
     text-decoration: underline;
+
+}
+.logbutton{
+    background-color: rgb(61, 64, 65);
+    color: white;
+    width: 100%;
+    height: 50px;
+    font-size: 1.5rem;
+    border-radius: 9999px;
+    transition-duration: 0.2s;
+    margin-top: 240px;
+    border: none;
+    cursor: pointer;
+}
+.logbutton:hover{
+    background-color:black;
+
+}
+#Pass:focus{
+    outline: none;
 
 }
  @media screen and (max-width:1260px) {
